Bug 443603 - kwin_wayland closes in KWin::InputMethod::stopInputMethod() when clicking on Input Method applet
Summary: kwin_wayland closes in KWin::InputMethod::stopInputMethod() when clicking on ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: master
Platform: Other Linux
: HI crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-10-11 15:55 UTC by Nate Graham
Modified: 2021-10-14 10:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
WAYLAND_DEBUG=1 plasmashell output (144.51 KB, text/x-log)
2021-10-11 15:55 UTC, Nate Graham
Details
partial backtrace (3.66 KB, text/x-log)
2021-10-12 13:00 UTC, Zamundaaa
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-10-11 15:55:42 UTC
Created attachment 142336 [details]
WAYLAND_DEBUG=1 plasmashell output

Everything from git master as of last Friday.


STEPS TO REPRODUCE
1. Set the input method be Maliit in System Settings
2. Reboot
3. Click on the Input Method applet in the system tray


OBSERVED RESULT
kwin_wayland closes (and restarts) and all apps die. It doesn't seem to crash, because no backtrace is generated--not even from gdb with `break exit` set. I'm attaching the output of `WAYLAND_DEBUG=1 plasmashell` though.


EXPECTED RESULT
The applet disables the virtual keyboard and KWin doesn't close and restart
Comment 1 Aleix Pol 2021-10-11 18:32:21 UTC
Meaning no backtrace on coredumpctl? If all apps die, it's probably kwin_wayland crashing.

The trace there only tells us that the compositor is gone.

Can you maybe try to run kwin on the debugger?
https://www.proli.net/2020/04/03/developing-kwin-wayland/
Comment 2 Nate Graham 2021-10-11 19:12:17 UTC
I did, and still got no backtrace in gdb--not even with `break exit` set.
Comment 3 Zamundaaa 2021-10-12 13:00:35 UTC
Created attachment 142370 [details]
partial backtrace
Comment 4 Zamundaaa 2021-10-12 13:01:00 UTC
Seems like coredumpctl doesn't catch recursions
Comment 5 Nate Graham 2021-10-12 15:50:32 UTC
Yay I'm not crazy!

Dying in KWin::InputMethod::stopInputMethod() makes sense because I was just able to reproduce the issue by setting the input method to "None" in the KCM as well.
Comment 6 Bug Janitor Service 2021-10-13 13:23:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1518
Comment 7 Bug Janitor Service 2021-10-14 07:47:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1524
Comment 8 Aleix Pol 2021-10-14 10:07:31 UTC
Git commit e550480c43db4387eaf5c16a3b6136a72147a26a by Aleix Pol Gonzalez, on behalf of Vlad Zahorodnii.
Committed on 14/10/2021 at 10:02.
Pushed by apol into branch 'master'.

Rework input method teardown logic

Explicitly destroy input method rather than wait for the input method
connection to be destroyed by WaylandServer, it's less error prone.

M  +1    -0    autotests/integration/kwin_wayland_test.cpp
M  +7    -6    src/inputmethod.cpp
M  +11   -0    src/main.cpp
M  +2    -0    src/main.h
M  +2    -1    src/main_wayland.cpp
M  +0    -3    src/wayland_server.cpp
M  +0    -1    src/wayland_server.h

https://invent.kde.org/plasma/kwin/commit/e550480c43db4387eaf5c16a3b6136a72147a26a