InputMethod:disconnect from waylandServer before destroying connection

BUG: 443603